# AstroSorter

./: .gitignore  AstroSorter.spec  LICENSE  README.md  SPEC.md  pyproject.toml  requirements.txt
AstroSorter/: __init__.py  classifier.py  main.py  ui_components.py  version.py
astro_sorter/: main.py  ui_components.py
